--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       <div class="hero-container" data-aos="fade-in">
         <h1>DEWMI HERATH</h1>
         <p>
-          I'm
+          I'm a
           <span class="typed" data-typed-items="Designer, Developer"></span>
         </p>
       </div>
@@ -158,10 +158,10 @@
 
                           <div class="address">
                             <i class="bi bi-backpack4-fill"></i>
-                            <h4>Degree:</h4>
-                            <p> Information Technology spesaizing Intractive Media
+                            <h4>Degree:</h4> 
+                            <p> Information Technology Specializing in Interactive Media
                               [Undergraduate]
-                            at SLIIT
+                            at Sri Lanka Institute of Information Technology 
                             <br/><em>2021-2025</em>
                           </div>
 
