--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                           <div class="address">
                             <i class="bi bi-backpack4-fill"></i>
                             <h4>Degree:</h4> 
-                            <p> Information Technology Specializing in Interactive Media
+                            <p> Information Technology Specializing in Interactive Media [SLIIT]
                               [Undergraduate]
                             at Sri Lanka Institute of Information Technology 
                             <br/><em>2021-2025</em>
