--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
                           <div class="address">
                             <i class="bi bi-backpack4-fill"></i>
                             <h4>Degree:</h4> 
-                            <p> Information Technology Specializing in Interactive Media [SLIIT]
-                              [Undergraduate]
-                            at Sri Lanka Institute of Information Technology 
+                            <p> Information Technology Specializing in Interactive Media 
+                              [Undergraduate]<br/>
+                            at Sri Lanka Institute of Information Technology [SLIIT]
                             <br/><em>2021-2025</em>
                           </div>
 
