--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
                             <h4>Degree:</h4> 
                             <p> Information Technology Specializing in Interactive Media 
                               [Undergraduate]<br/>
-                            at Sri Lanka Institute of Information Technology [SLIIT]
-                            <br/><em>2021-2025</em>
+                            
+                            <br/><em>at Sri Lanka Institute of Information Technology [SLIIT]2021-2025<br/></em>
                           </div>
 
                           <div class="address">
