--- a/cakeWEBSITE.html
+++ b/cakeWEBSITE.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
++<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -87,7 +87,7 @@
                 <li><strong>Software</strong>: Visual Studio</li>
                 <li><strong>Languages</strong>: HTML/CSS/JavaScript/Bootstrap</li>
                 <li><strong>Portfolio Detail</strong>: 01 December, 2023</li>
-                <li><strong>Project URL</strong>: <a href="https://dewmiherath.github.io/YmyCake/">www.example.com</a></li>
+                <li><strong>Project URL</strong>: <a href="https://dewmiherath.github.io/YmyCake/">https://dewmiherath.github.io/YmyCake/</a></li>
               </ul>
             </div>
           </div>
