--- a/fashionWEBSITE.html
+++ b/fashionWEBSITE.html
@@ -110,7 +110,7 @@
                 <li><strong>Software</strong>: Visual Studio</li>
                 <li><strong>Language</strong>: HTML/CSS/JavaScript/Bootstrap</li>
                 <li><strong>Portfolio Detail</strong>: 01 December, 2023</li>
-                <li><strong>Project URL</strong>: <a href="https://dewmiherath.github.io/Fashion/">www.example.com</a></li>
+                <li><strong>Project URL</strong>: <a href="https://dewmiherath.github.io/Fashion/">https://dewmiherath.github.io/Fashion/</a></li>
               </ul>
             </div>
           </div>
