--- a/index.html
+++ b/index.html
@@ -639,6 +639,27 @@
                 </div>
               </div>
             </div>
+             <div class="col-lg-4 col-md-6 portfolio-item filter-UI">
+              <div class="portfolio-wrap">
+                <img
+                  src="assets/img/portfolio/breakfast.png"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-links">
+                  <a
+                    href="assets/img/portfolio/breakfast.png"
+                    data-gallery="portfolioGallery"
+                    class="portfolio-lightbox"
+                    title="UI 1"
+                    ><i class="bx bx-plus"></i
+                  ></a>
+                  <a href="brekfastUI.html" title="More Details"
+                    ><i class="bx bx-link"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
 
            <!--  <div class="col-lg-4 col-md-6 portfolio-item filter-card">
               <div class="portfolio-wrap">
