--- a/index.html
+++ b/index.html
@@ -639,19 +639,24 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4 col-md-6 portfolio-item filter-UI">
+            <div
+            class="row portfolio-container"
+            data-aos="fade-up"
+            data-aos-delay="100"
+          >
+             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/breakfast.png"
+                  src="assets/img/portfolio/breakfast.jpg"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/breakfast.png"
+                    href="assets/img/portfolio/breakfast.jpg"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
-                    title="UI 1"
+                    title="Card 1"
                     ><i class="bx bx-plus"></i
                   ></a>
                   <a href="brekfastUI.html" title="More Details"
